# rust-webapp-demo

./: .env  .gitignore  Cargo.toml  README.md  compose.yaml  domain_model.drawio  populate_db.sql  setup_db.sql
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: album_api.rs  artist_api.rs  song_api.rs
backend/src/entities/: mod.rs
backend/src/migrator/: m20230109_000001_create_album_table.rs  m20230109_000002_create_song_table.rs  m20230109_000003_create_artist_table.rs  m20230109_000004_create_album_artist_mtm.rs  mod.rs
backend/src/tests/: mod.rs  song_api.rs
entities/: Cargo.toml
entities/src/: album.rs  album_artist_mtm.rs  artist.rs  lib.rs  prelude.rs  sea_orm_active_enums.rs  song.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: lib.rs  main.rs  router.rs  theme.rs
frontend/src/components/: album.rs  artist.rs  mod.rs  navbar.rs  song.rs
frontend/src/pages/: album_artist_create.rs  album_create.rs  album_edit.rs  albums.rs  artist.rs  artist_create.rs  artist_edit.rs  artists.rs  home.rs  mod.rs  song_create.rs  song_edit.rs  songs.rs
src/: main.rs
src/api/: album_api.rs  mod.rs  song_api.rs
src/entities/: album.rs  album_artist_mtm.rs  artist.rs  sea_orm_active_enums.rs  song.rs
src/migrator/: m20230109_000002_create_song_table.rs  m20230109_000003_create_artist_table.rs
src/model/: mod.rs  song.rs
src/repository/: mod.rs  song_repository.rs
src/tests/: song_api.rs
