[package]
name = "rust-webapp-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.136"
chrono = {version = "0.4.23", features = ["serde"]}
dotenv = "0.15.0"
sea-orm = {version = "0.10.6", features = ["sqlx-postgres", "runtime-async-std-native-tls", "macros", "mock", "tests-cfg"]}
futures = "0.3.21"
sea-orm-migration = "0.10.6"