[package]
name = "entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
sea-orm = {version = "0.10.6", features = ["sqlx-postgres", "runtime-async-std-native-tls", "macros", "mock", "tests-cfg"]}
